--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11053,7 +11053,7 @@ header.masthead h1, header.masthead .h1 {
   top: 0;
   bottom: 0;
   left: 40px;
-  width: 2px;
+  width: 7px;
   margin-left: -1.5px;
   content: "";
   background-color: #e9ecef;
@@ -11061,11 +11061,11 @@ header.masthead h1, header.masthead .h1 {
 .timeline > li {
   position: relative;
   min-height: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 .timeline > li:after, .timeline > li:before {
   display: table;
-  content: " ";
+  content: "";
 }
 .timeline > li:after {
   clear: both;
@@ -11095,12 +11095,11 @@ header.masthead h1, header.masthead .h1 {
   left: 0;
   width: 80px;
   height: 80px;
-  margin-left: 0;
+  margin-left: 2px;
   text-align: center;
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #ffffff;
 }
 .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
   font-size: 10px;
@@ -11126,6 +11125,7 @@ header.masthead h1, header.masthead .h1 {
 }
 .timeline > li:last-child {
   margin-bottom: 0;
+  min-height: 10px;
 }
 .timeline .timeline-heading h4, .timeline .timeline-heading .h4 {
   margin-top: 0;
@@ -11145,7 +11145,7 @@ header.masthead h1, header.masthead .h1 {
   }
   .timeline > li {
     min-height: 60px;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
   }
   .timeline > li .timeline-panel {
     float: left;
@@ -11157,7 +11157,7 @@ header.masthead h1, header.masthead .h1 {
     left: 50%;
     width: 100px;
     height: 100px;
-    margin-left: -50px;
+    margin-left: -49px;
   }
   .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
     font-size: 13px;
@@ -11178,9 +11178,9 @@ header.masthead h1, header.masthead .h1 {
     padding: 0 20px 20px;
   }
   .timeline > li .timeline-image {
-    width: 150px;
-    height: 150px;
-    margin-left: -75px;
+    width: 130px;
+    height: 130px;
+    margin-left: -63px;
   }
   .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
     font-size: 18px;
@@ -11199,9 +11199,9 @@ header.masthead h1, header.masthead .h1 {
     padding: 0 20px 20px 100px;
   }
   .timeline > li .timeline-image {
-    width: 170px;
-    height: 170px;
-    margin-left: -85px;
+    width: 130px;
+    height: 130px;
+    margin-left: -63px;
   }
   .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
     margin-top: 40px;
@@ -11211,6 +11211,11 @@ header.masthead h1, header.masthead .h1 {
   }
 }
 
+.icon-image {
+  height: 50px;
+  width: 50px;
+  align-self: center;
+}
 
 #portfolio .container-fluid, #portfolio .container-sm, #portfolio .container-md, #portfolio .container-lg, #portfolio .container-xl, #portfolio .container-xxl {
   max-width: 1920px;
