--- a/templates/account/registration/account_details.html
+++ b/templates/account/registration/account_details.html
@@ -28,50 +28,28 @@
                                 {% endfor %}
                             {% endif %}
 
-
                             <!-- Name input-->
+                            <label class="form-label text-white">{{ form.user_name.label }}</label>
+                            <div class="form-floating mb-3">
+                                {{ form.user_name }}
+                                <label class="text-muted" for="name">Nome completo</label>
+                                <div class="invalid-feedback" data-sb-feedback="name:required">Você precisa digitar seu nome completo!</div>
+
+                            </div>
+                            <!-- CPF input-->
+                            <label class="form-label text-white">{{ form.cpf.label }}</label>
                             <div class="form-floating mb-3">
                                 {{ form.cpf }}
                                 <label class="text-muted">CPF</label>
-                                <div class="invalid-feedback">A name is required.</div>
+                                <div class="invalid-feedback">Digite seu CPF.</div>
                             </div>
                             <!-- Email address input-->
+                            <label class="form-label text-white">{{ form.phone_number.label }}</label>
                             <div class="form-floating mb-3">
                                 {{ form.phone_number }}
                                 <label class="text-muted">Contato</label>
-                                <div class="invalid-feedback">An email is required.</div>
-                                <div class="invalid-feedback">Email is not valid.</div>
                             </div>
-                            <!-- Phone number input-->
-                            <div class="form-floating mb-3">
-                                {{ form.cep }}
-                                <label class="text-muted">CEP</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">Digite uma senha</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                {{ form.address_line_1 }}
-                                <label class="text-muted">Rua</label>
-                                <div class="invalid-feedback">Senha</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                {{ form.address_line_2 }}
-                                <label class="text-muted">Bairro</label>
-                                <div class="invalid-feedback">Senha</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                {{ form.city }}
-                                <label class="text-muted">Cidade</label>
-                                <div class="invalid-feedback">Senha</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                {{ form.district }}
-                                <label class="text-muted">Estado</label>
-                                <div class="invalid-feedback">Senha</div>
-                            </div>
+
 
                             <div class="d-grid">
                                 <button class="btn btn-primary btn-xl" type="submit">Continuar Compra</button>
@@ -83,6 +61,4 @@
             </div>
         </section>
     </header>
-    
-
 {% endblock %}
