order payments and product apps created

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -194,7 +194,7 @@
                                 <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/3.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">CASA 15</div>
-                                    <div class="project-name">Sala Jantar/Cozinha</div>
+                                    <div class="project-name">Sala Estar/Jantar</div>
                                 </div>
                             </a>
                         </div>
@@ -203,7 +203,7 @@
                                 <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/4.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">CASA 15</div>
-                                    <div class="project-name">Quarto Casal</div>
+                                    <div class="project-name">Sala de Estar</div>
                                 </div>
                             </a>
                         </div>
@@ -212,7 +212,7 @@
                                 <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/5.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">CASA 15</div>
-                                    <div class="project-name">Quarto Solteiro</div>
+                                    <div class="project-name">Banheiro Social</div>
                                 </div>
                             </a>
                         </div>
@@ -230,7 +230,7 @@
                                 <img class="img-fluid m1" src="{% static 'assets/img/portfolio/thumbnails/7.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">Casa 15</div>
-                                    <div class="project-name">Sala Estar/Jantar</div>
+                                    <div class="project-name">Quarto Casal</div>
                                 </div>
                             </a>
                         </div>
@@ -239,7 +239,7 @@
                                 <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/8.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">CASA 15</div>
-                                    <div class="project-name">Sala Jantar/Cozinha</div>
+                                    <div class="project-name">Quarto Casal</div>
                                 </div>
                             </a>
                         </div>
@@ -248,7 +248,7 @@
                                 <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/9.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">CASA 15</div>
-                                    <div class="project-name">Sala Jantar/Cozinha</div>
+                                    <div class="project-name">Quarto Solteiro</div>
                                 </div>
                             </a>
                         </div>
@@ -257,7 +257,7 @@
                                 <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/10.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">CASA 15</div>
-                                    <div class="project-name">Quarto Casal</div>
+                                    <div class="project-name">Área Externa</div>
                                 </div>
                             </a>
                         </div>
@@ -266,7 +266,7 @@
                                 <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/11.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">CASA 15</div>
-                                    <div class="project-name">Quarto Solteiro</div>
+                                    <div class="project-name">Área Externa</div>
                                 </div>
                             </a>
                         </div>
@@ -275,7 +275,7 @@
                                 <img class="img-fluid" src="{% static 'assets/img/portfolio/thumbnails/12.jpg' %}" alt="..."/>
                                 <div class="portfolio-box-caption p-3">
                                     <div class="project-category text-white-50">Category</div>
-                                    <div class="project-name">Banheiro Social</div>
+                                    <div class="project-name">Área Externa</div>
                                 </div>
                             </a>
                         </div>
@@ -347,7 +347,7 @@
             <section class="page-section bg-dark text-white">
                 <div class="container px-4 px-lg-5 text-center">
                     <h2 class="mb-4">DE <s>$499,00</s> por R$399,00 na pré venda!</h2>
-                    <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Dividido em até 12x no cartão</a>
+                <a class="btn btn-light btn-xl" href="{% url "account:register" %}">Dividido em até 12x no cartão</a>
                 </div>
             </section>           
 
