--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -41,13 +41,13 @@
                         <a class="nav-link" href="#how">Como?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Realize seu sonho!</a>
+                        <a class="nav-link" href="#portfolio">Realize um sonho!</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">Sobre</a>
+                        <a class="nav-link" href="#about">Quem somos e qual a ideia?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Comprar</a>
+                        <a class="nav-link" href="#action">Comprar</a>
                     </li>
                 </ul>
             </div>
