--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -351,7 +351,8 @@
                             <i class="fs-1 text-primary px-2"><img style="height: 30px;" src="{% static 'assets/img/icons/boleto.png' %}" alt="Boleto bancário"></i>
                         </span>
                     </div>
-                    <a class="btn btn-light btn-xl" href="{% url "account:register" %}">
+                    <!--<a class="btn btn-light btn-xl" href="{% url "account:register" %}">-->
+                    <a class="btn btn-light btn-xl" href="#">
                         <h5>
                             <b>COMPRE AGORA</b>
                         </h5>
