pushing to github

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -77,7 +77,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">Com o
                                         <b>Projeto CASA 15</b>
-                                        você mesmo pode construir ou contratar a mão de obra, a decisão é sua!<br>Com nossa técnica construtiva, construir é muito simples! Mas caso decida contratar, o custo ainda é muito baixo variando entre 8 a 10 mil reais, com tempo de 2 meses!</p>
+                                        você mesmo pode construir ou contratar a mão de obra, a decisão é sua!<br>Com nossa técnica construtiva, construir é muito simples! Mas, caso decida contratar, o custo ainda é muito baixo e varia de 8 a 10 mil reais, com duração de 2 meses!</p>
                                 </div>
                             </div>
                         </li>
@@ -98,25 +98,25 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/jantar.jpeg' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/jantar.png' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Sala Jantar</h3>
-                                <p class="text-muted mb-0">2,50x3,20m - Com bancada integrada à cozinha e sala de estar. É o compartimento de acesso à casa. Logo na entrada um aparador com bar e parede com iluminação decorativa direcionada. A bancada pode ser móvel sendo alterada a posição da mesa para 04 pessoas de acordo com a ocasião. Área de 8,00m².</p>
+                                <p class="text-muted mb-0">2,50x3,20m - Com bancada integrada à cozinha e sala de estar. É o compartimento de acesso à casa. Logo na entrada, um aparador com bar e parede com iluminação decorativa direcionada. A bancada é móvel, e sendo removida traz outro uso para cozinha e sala de jantar. Área de 8,00m².</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/estar.jpeg' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/estar.png' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Sala Estar</h3>
-                                <p class="text-muted mb-0">2,63x2,18m - Integrada com a sala de jantar. O layout foi disposto de modo que a circulação não permita a interferência de passantes em frente à televisão. Área de 5,64m².</p>
+                                <p class="text-muted mb-0">2,63x2,18m - É integrada com a sala de jantar. O layout foi disposto de modo que a circulação não permita a interferência de passantes em frente à televisão. Área de 5,64m².</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/kitchen.jpeg' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/kitchen.png' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Cozinha</h3>
                                 <p class="text-muted mb-0">1,50x3,88m - O layout em “L” da cozinha esconde a pia com a louça do almoço. Tem acesso pela sala de jantar ou área de serviço. Área 5,82m².</p>
@@ -125,7 +125,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/bwc.jpeg' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/bwc.png' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Banheiro</h3>
                                 <p class="text-muted mb-0">1,75x1,88m - Espaçoso, entrada no corredor próximo aos quartos. Também na versão com layout acessível. Área 3,29m².</p>
@@ -136,7 +136,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/solteiro.jpeg' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/solteiro.png' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Quarto 01</h3>
                                 <p class="text-muted mb-0">3,00x4,00m - Layout para duas camas solteiro, armário embutido, escrivaninha e mesas de cabeceira. Opção de janela ou porta de correr em duas folhas para acesso aos fundos do terreno. Área de 12,00m².
@@ -146,7 +146,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/casal.jpeg' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/casal.png' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Quarto 02***</h3>
                                 <p class="text-muted mb-0">2,50x4,50m - Cama de casal, armário espaçoso, escrivaninha, televisão e mesas de cabeceira. Porta de correr em duas folhas para acesso aos fundos do terreno. Área de 11,25m²</p>
@@ -155,7 +155,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/circ.jpeg' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/circ.png' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Circulação</h3>
                                 <p class="text-muted mb-0">1,13x2,75m - Largura generosa, facilita a circulação de móveis e a decoração do ambiente. Área 3,11m².</p>
@@ -164,7 +164,7 @@
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <div class="mb-2">
-                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/lavanderia.jpeg' %}" alt=""></i>
+                                    <i class="fs-1 text-primary"><img class="icon-image" src="{% static 'assets/img/icons/lavanderia.png' %}" alt=""></i>
                                 </div>
                                 <h3 class="h4 mb-2">Área de Serviço</h3>
                                 <p class="text-muted mb-0">1,50x4,00m - Coberta, servida de espaços para: tanque, máquina de lavar, armário despensa e dois varais para secar roupas em dias de chuva. Além de espaço para depósito de gás externo, seguro, permite sua troca sem a entrada na casa. Área 6,00m².</p>
@@ -292,8 +292,11 @@
                         <div class="col-lg-8 text-center">
                             <h2 class="text-white mt-0">Quem somos e qual a ideia?</h2>
                             <hr class="divider divider-light"/>
-                            <p class="text-white-75 mb-4">Somos um time de Arquitetos e Engenheiros com mais de 10 anos de experiência e  projetamos uma habitação de baixo custo e alta qualidade, pensada para ser acessível, ampliável e adaptável. Oferecemos todos os projetos necessários para execução (arquitetônico, estrutural, hidrossanitário e elétrico), além de planilhas quantitativas e orçamentárias e manual de execução. Com base em uma técnica construtiva única, a Casa 15 foi pensada para ser viável economicamente e um investimento garantido.
-                            </p>
+                            <h5 class="text-white-75 mb-4">
+                                A <b>CASA 15</b> é um projeto executivo de baixo custo que tem como objetivo possibilitar a execução de uma casa habitável a partir de 15 mil reais em materiais que com o tempo você deixa do seu jeito. Utilizando-se de técnicas construtivas como <b>Tijolinho Ecológico</b> e <b>Laje pré-moldada em EPS</b>, o projeto foi desenvolvido para se adaptar a terrenos pequenos, podendo atender uma família de 4 pessoas. <br>
+                                Acessível, ampliável e adaptável, o projeto permite a construção em meio lote sem aberturas laterais. Pode ampliar para cima, é customizável no layout, na implantação do terreno e nos paramentos externos.
+                                Oferecemos todos os projetos necessários para execução (arquitetônico, estrutural, hidrossanitário e elétrico), além de planilhas quantitativas e manual de execução, tudo isso por um preço acessível.
+                            </h5>
                             <a class="btn btn-light btn-xl" href="#action">COMPRE AGORA NA PRÉ-VENDA</a>
                         </div>
                     </div>
@@ -302,34 +305,49 @@
             <!-- Services-->
             <section class="page-section" id="services">
                 <div class="container px-4 px-lg-5">
-                    <h2 class="text-center mt-0">O que você recebe:</h2>
+                    <h2 class="text-center mt-0">Por que comprar o Projeto CASA15?</h2>
+                    <h3 class="section-subheading text-muted text-center">Apenas com o projeto completo e a Lista de Materiais você poderá construir barato, rápido e sem desperdício.</h3>
                     <hr class="divider"/>
-                    <div class="row gx-4 gx-lg-5">
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="mt-5">
-                                <h3 class="h4 mb-2">Projeto de Arquitetura</h3>
-                                <p class="text-muted mb-0">É o conjunto de desenhos responsável por guiar a execução da obra,
-                                </p>
+                    <h3 class="text-center mt-0">O que você recebe:</h3>
+                    <hr class="divider"/>
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top" src="{% static 'assets/img/arq.jpg' %}" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Projeto de Arquitetura</h5>
+                                    <p class="card-text">Planta com as medidas e áreas de cada ambiente, detalhe de cada fiada do tijolinho ecologico, etc...</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="mt-5">
-                                <h3 class="h4 mb-2">Projetos Complementares</h3>
-                                <p class="text-muted mb-0">Todos os desenhos complementares necessários com detalhamento da rede elétrica, da parte hidráulica e estrutural.</p>
+                        <div class="col-sm">
+                            <div class="card col-sm" style="width: 18rem;">
+                                <img class="card-img-top" src="{% static 'assets/img/est.jpg' %}" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Projetos de Complemetares</h5>
+                                    <p class="card-text">Planta com as medidas e áreas de cada ambiente, detalhe de cada fiada do tijolinho ecologico, etc...</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="mt-5">
-                                <h3 class="h4 mb-2">Manual de Execução</h3>
-                                <p class="text-muted mb-0">Um manual com todo o passo a passo de execução da obra</p>
+                        <div class="col-sm">
+                            <div class="card col-sm" style="width: 18rem;">
+                                <img class="card-img-top" src="{% static 'assets/img/est.jpg' %}" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Projeto de Arquitetura</h5>
+                                    <p class="card-text">Planta com as medidas e áreas de cada ambiente, detalhe de cada fiada do tijolinho ecologico, etc...</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="mt-5">
-                                <h3 class="h4 mb-2">Planilha de Quantitativos</h3>
-                                <p class="text-muted mb-0">Lista de materiais utilizados.</p>
+                        <div class="col-sm">
+                            <div class="card col-sm" style="width: 18rem;">
+                                <img class="card-img-top" src="{% static 'assets/img/est.jpg' %}" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Projeto de Arquitetura</h5>
+                                    <p class="card-text">Planta com as medidas e áreas de cada ambiente, detalhe de cada fiada do tijolinho ecologico, etc...</p>
+                                </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </section>
